fix():整合接口
