# controller/sbomController/Model.go
@@ -18,12 +18,5 @@ type GenerateSBOMRequest struct {
 }
 
 type QuerySBOMRequest struct {
-	Page int `json:"page"` //页面索引
-	Size int `json:"size"` //页面大小
-}
-type GenerateSbomResult struct {
-	DownloadUrl string `json:"download_url"` // 下载地址
-}
-type QuerySbomResult struct {
-	SbomReports string `json:"sbomReports" example:{}` // sbom记录
+	SbomReportId uint `json:"sbomReportId"` //页面索引
 }
